gitops/environments/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
